# api/src/swagger.json
@@ -762,7 +762,7 @@
                     {
                         "name": "limit",
                         "in": "query",
-                        "description": "Limite de anuncios que podem ser listados em uma pagina",
+                        "description": "Limite de anúncios que podem ser listados em uma pagina",
                         "required": false,
                         "schema": {
                             "type": "integer"
@@ -779,8 +779,8 @@
                     }
                 ],
                 "tags": ["Announcement"],
-                "summary": "Listar anuncios",
-                "description": "Lista todos os anuncios e suas fotos principais, é possivel utilizar o corpo da requisição para filtrar os dados que serão retornados",
+                "summary": "Listar anúncios",
+                "description": "Lista todos os anúncios e suas fotos principais, é possivel utilizar o corpo da requisição para filtrar os dados que serão retornados",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -968,6 +968,240 @@
                     },
                     "400": {
                         "description": "O tipo de anuncio informado não é compativel deve ser informado: 'A' para adoção ou 'P' para perdido<br />A especie informada não é compativel deve ser informado: 'C' para cachorro ou 'G' para gato"
+                    }
+                }
+            }
+        },
+        "/announcement/ofuser/{cod_usuario}": {
+            "patch": {
+                "parameters": [
+                    {
+                        "name": "cod_usuario",
+                        "in": "query",
+                        "description": "Código do usuário",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Número da pagina",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Limite de anúncios que podem ser listados em uma pagina",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "order",
+                        "in": "query",
+                        "description": "Pelo o que será ordenado os resultados, por padrão é ordenado pela data de criação de maneira crescente",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "tags": ["Announcement"],
+                "summary": "Listar anúncios de um usuário especifíco",
+                "description": "Lista todos os anúncios e suas fotos principais de um usuário especifíco, é possivel utilizar o corpo da requisição para filtrar os dados que serão retornados",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "tipo": {
+                                        "type": "string",
+                                        "default": ["A", "P"]
+                                    },
+                                    "especie": {
+                                        "type": "string",
+                                        "default": ["C", "G"]
+                                    },
+                                    "raca": {
+                                        "type": "string"
+                                    },
+                                    "uf": {
+                                        "type": "string"
+                                    },
+                                    "sexo": {
+                                        "type": "string",
+                                        "default": ["F", "M"]
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "properties": {
+                                                "cod_usuario": {
+                                                    "type": "integer"
+                                                },
+                                                "cod_animal": {
+                                                    "type": "integer"
+                                                },
+                                                "cod_anuncio": {
+                                                    "type": "integer"
+                                                },
+                                                "tipo": {
+                                                    "type": "string",
+                                                    "default": ["A", "P"]
+                                                },
+                                                "descricao": {
+                                                    "type": "string"
+                                                },
+                                                "cep": {
+                                                    "type": "string"
+                                                },
+                                                "uf": {
+                                                    "type": "string"
+                                                },
+                                                "cidade": {
+                                                    "type": "string"
+                                                },
+                                                "bairro": {
+                                                    "type": "string"
+                                                },
+                                                "endereco": {
+                                                    "type": "string"
+                                                },
+                                                "numero": {
+                                                    "type": "int"
+                                                },
+                                                "complemento": {
+                                                    "type": "string"
+                                                },
+                                                "tel": {
+                                                    "type": "string"
+                                                },
+                                                "tel2": {
+                                                    "type": "string"
+                                                },
+                                                "nome_animal": {
+                                                    "type": "string"
+                                                },
+                                                "especie": {
+                                                    "type": "string",
+                                                    "default": ["C", "G"]
+                                                },
+                                                "idade": {
+                                                    "type": "string"
+                                                },
+                                                "raca": {
+                                                    "type": "string"
+                                                },
+                                                "cor": {
+                                                    "type": "string"
+                                                },
+                                                "sexo": {
+                                                    "type": "string",
+                                                    "default": ["F", "M"]
+                                                },
+                                                "nome": {
+                                                    "type": "string"
+                                                },
+                                                "email": {
+                                                    "type": "string"
+                                                },
+                                                "foto_principal": {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "foto": {
+                                                            "type": "string"
+                                                        },
+                                                        "extensao": {
+                                                            "type": "string"
+                                                        }
+                                                    }
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                }
+                                            }
+                                        },
+                                        "count": {
+                                            "type": "integer"
+                                        },
+                                        "limit": {
+                                            "type": "integer"
+                                        },
+                                        "page": {
+                                            "type": "integer"
+                                        },
+                                        "totalPages": {
+                                            "type": "integer"
+                                        }
+                                    },
+                                    "example": {
+                                        "data": [
+                                            {
+                                                "cod_anuncio": 3,
+                                                "cod_usuario": 1,
+                                                "cod_animal": 4,
+                                                "descricao": "Descricao do anuncio",
+                                                "uf": "SP",
+                                                "cidade": "SÃO PAULO",
+                                                "bairro": "BUTANTÃ",
+                                                "endereco": "Rua exemplo ",
+                                                "numero": 123,
+                                                "complemento": "bloco B",
+                                                "created_at": "2023-04-25T19:51:40.000Z",
+                                                "updated_at": "2023-04-25T20:09:27.000Z",
+                                                "tel": "11934576497",
+                                                "tel2": "1134576497",
+                                                "tipo": "P",
+                                                "cep": "011223344",
+                                                "nome_animal": "Tobey",
+                                                "especie": "cachorro",
+                                                "idade": "5",
+                                                "raca": "SHIH TZU",
+                                                "cor": "branco e marrom",
+                                                "sexo": "M",
+                                                "nome": "Patrick Rossetto",
+                                                "email": "patrickrossetto01@gmail.com",
+                                                "foto_principal": {
+                                                    "foto": "",
+                                                    "extensao": ""
+                                                }
+                                            }
+                                        ],
+                                        "count": 1,
+                                        "limit": 10,
+                                        "page": 1,
+                                        "totalPages": 1
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "O código do usuario deve ser informado.<br />O tipo de anuncio informado não é compativel deve ser informado: 'A' para adoção ou 'P' para perdido<br />A especie informada não é compativel deve ser informado: 'C' para cachorro ou 'G' para gato"
                     }
                 }
             }
